update Display.Java